[package]
name = "data_analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luca Rossi <lucarossi147@gmail.com>"]
description = "CLI for basic data analysis for abf data written in pure rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rust_abf = '0.3.0'
ndarray = "0.15.6"
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
